--- a/Travellian/styles/offer.css
+++ b/Travellian/styles/offer.css
@@ -85,7 +85,13 @@ span.offer-content-box-text-price-box-amount{
 @media (min-width: 768px) and (max-width: 1152px) {
     .offer-content{
         flex-direction: row;
+        flex-wrap: wrap;
         margin-top: 100px;
+    }
+
+    .offer-content-box{
+        max-width: 360px;
+        margin: auto;
     }
 
     .offer-content-box-text{
