--- a/Travellian/styles/style.css
+++ b/Travellian/styles/style.css
@@ -32,6 +32,7 @@
 body{
     font-family: rubik, sans-serif;
     font-weight: 400;
+    overflow-x: hidden;
 }
 
 img {
